# Aphrodite

./: .clang-format  CMakeLists.txt  README.md
include/: GLContext.hpp  canvas.hpp  image.hpp  shader.hpp  texture.hpp  window.hpp
shaders/: passthrough.frag  triangle.frag  triangle.vert
src/: GLContext.cpp  canvas.cpp  canvas.hpp  main.cpp  shader.cpp  texture.cpp  texture.hpp  window.cpp  window.hpp
